# perlchecker

./: .buildinfo  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  annotation_reference.html  configuration.html  error_reference.html  examples.html  genindex.html  getting_started.html  index.html  language_reference.html  limitations.html  objects.inv  search.html  searchindex.js  user_guide.html  verification_pipeline.html
.claude/: settings.json
.doctrees/: annotation_reference.doctree  configuration.doctree  environment.pickle  error_reference.doctree  examples.doctree  getting_started.doctree  index.doctree  language_reference.doctree  limitations.doctree  user_guide.doctree  verification_pipeline.doctree
_sources/: annotation_reference.rst.txt  error_reference.rst.txt  examples.rst.txt  getting_started.rst.txt  index.rst.txt  language_reference.rst.txt  limitations.rst.txt  user_guide.rst.txt  verification_pipeline.rst.txt
docs/: DETAILED-PLAN.md  EXPANSION-META-PLAN.md  PERL-SUBSET.md  PLAN.md  ROUNDS-5-9-PLAN.md
examples/: 00_identity_with_pre.pl  01_linear_arithmetic.pl  02_branch_with_comparisons.pl  03_boolean_guards.pl  04_counterexample.pl  05_elsif_verified.pl  06_elsif_counterexample.pl  07_declaration_then_assign.pl  08_uninitialized_local.pl  09_safe_division.pl  100_final_showcase.pl  101_foreach_loop.pl  102_array_literal_init.pl  103_regex_desugaring.pl  104_string_ordering_fix.pl  105_64bit_bitvectors.pl  106_sound_reverse.pl  107_loop_ast_structure.pl  108_z3_loop_unrolling.pl  109_loop_invariants.pl  10_division_by_zero.pl  (+280 more)
(+50 files in other folders)
